<resources>
    <string name="app_name">Compra Fácil</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Menu items -->
    <string name="action_pedido">Pedido</string>
    <string name="action_recetas">Recetas</string>
    <string name="action_categorias">Categorías</string>

    <!-- Categorias -->
    <string name="buscarCategoria">Buscar Categoría</string>
    <string name="categorias">Categorías</string>
    <string name="title_activity_categoria">Categoria</string>
    <string name="categoriaX">CategoríaX</string>

    <!-- Productos -->
    <string name="title_activity_producto">Producto</string>
    <string name="productoX">Producto X</string>
    <string name="descripcionProducto">Brick de 1 L de leche desnadata. Procedencia: España</string>
    <string name="unidades">Unidades</string>
    <string name="comprar">Comprar</string>
    <string name="uno">1</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precioUnidad">Precio/ud</string>
    <string name="totalProducto">Tot. Prod.</string>

    <!-- Recetas -->
    <string name="title_activity_recetas">Recetas</string>
    <string name="recetas">Recetas</string>
    <string name="title_activity_receta_x">Recetas</string>
    <string name="tituloRecetaX">Receta X</string>
    <string name="descripcionReceta">Ingredientes para 4 personas: 3 zanahorias, guisantes, cebolla, 2 huevos, ....</string>
    <string name="VolverARecetas">Volver a recetas</string>

    <!-- Pedidos -->
    <string name="pedido">Pedido</string>
    <string name="seguirComprando">Seguir Comprando</string>
    <string name="finalizarPedido">Finalizar Pedido</string>
    <string name="resumenPedido">Resumen del Pedido</string>
    <string name="totalPedido">Total pedido : </string>
    <string name="nombre">Nombre: </string>
    <string name="telefono">Teléfono: </string>
    <string name="confirmarPedido">Confirmar pedido</string>
    <string name="aceptar">Aceptar</string>
    <string name="volver">Volver</string>

    <string name="rs_categoria_no_encontrada">No se han encontrado categorias</string>
    <string name="rs_productos_no_encontrados">No se encontraron productos</string>
    <string name="magnitud_cantidad">Cantidad</string>
    <string name="toast_producto_anniadido_carrito">Producto añadido al carrito</string>
    <string name="msg_pedido_sin_productos">No hay productos en el pedido</string>
    <string name="textTotal">"Total : "</string>
    <string name="title_activity_confirmar_pedido">Confirmar Pedido</string>
    <string name="title_activity_resumen_pedido">Resumen del Pedido</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rs_problema_en_pedido">El total es 0 o negativo, modifique el pedido</string>
    <string name="btn_ok">OK</string>
    <string name="err_pedido_nombre_vacio">Introduzca un nombre de cliente</string>
    <string name="err_pedido_telefono_incorrecto">El teléfono tiene que tener 9 dígitos</string>
    <string name="err_pedido_telefono_vacio">Introduzca el teléfono del cliente</string>
    <string name="err_pedido_confirmacion">No se pudo confirmar el pedido</string>
    <string name="pedido_confirmado">Pedido realizado correctamente</string>


</resources>