<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tVCantidadFinal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.appeasyshop.activities.ConfirmarPedidoActivity"
    tools:showIn="@layout/activity_confirmar_pedido">


    <ListView
        android:id="@+id/listViewResumenPedido"
        android:layout_width="400dp"
        android:layout_height="257dp"
        android:layout_below="@+id/tvResumenPedido"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/tvResumenPedido"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/resumenPedido"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTotalPedido"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewResumenPedido"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="106dp"
        android:layout_toEndOf="@+id/tvTotalPedido"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalPedido"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="23dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="149dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textTotalPedido"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="70dp"
        android:layout_toEndOf="@+id/textViewNombre"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNombre"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:text="@string/telefono" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombre"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="70dp"
        android:layout_toEndOf="@+id/textView9"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewConfirmarPedido"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTelefono"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="98dp"
        android:text="@string/confirmarPedido"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewConfirmarPedido"
        android:layout_alignParentStart="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="21dp"
        android:text="@string/aceptar" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewConfirmarPedido"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="38dp"
        android:layout_toEndOf="@+id/buttonAceptar"
        android:text="@string/volver" />

    <TextView
        android:id="@+id/tvTotalPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewResumenPedido"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="31dp"
        android:text="@string/totalPedido" />

</RelativeLayout>