<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_receta_x"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.appeasyshop.RecetaXActivity"
    tools:showIn="@layout/activity_recetax">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="103dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logotienda" />

    <SearchView
        android:id="@+id/searchWords"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@+id/imageLogo" />


    <TextView
        android:id="@+id/textPedido"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="120dp"
        android:text="@string/tituloRecetaX"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="81dp"
        android:layout_below="@+id/textPedido"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="113dp"
        android:src="@drawable/receta" />


    <TextView
        android:id="@+id/textDescripcionReceta"
        android:layout_width="357dp"
        android:layout_height="289dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:text="@string/descripcionReceta"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:layout_below="@+id/textDescripcionReceta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="0dp"
        android:text="@string/VolverARecetas" />


</RelativeLayout>